Final Project: Adding Data - Part One Lab

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -41,7 +41,9 @@
       </div>
       <% }); %>
       <div class="row">
-        <button class="btn btn-primary add-btn">Add</button>
+        <a href="/house/add"
+          ><button class="btn btn-primary add-btn">Add</button></a
+        >
       </div>
     </div>
   </body>
