--- a/src/views/globomantics/bids.ejs
+++ b/src/views/globomantics/bids.ejs
@@ -16,18 +16,16 @@
     <div class="container-bids">
       <div class="property-image mr-4">
         <img
-          src="../images/GloboHouse.jpeg"
-          alt="Photo of house: 12 Valley of Kings, Geneva"
+          src="/images/<%= houseInfo.image ? houseInfo.image : 'photonotfound.jpeg' %>""
+          alt="Photo of house: <%= houseInfo.address.street %>, <%= houseInfo.address.city %>"
         />
       </div>
       <div class="property-details flex-grow-1">
-        <h5>Switzerland</h5>
-        <h3>12 Valley of Kings, Geneva</h3>
-        <h2>$900,000</h2>
+        <h5><%= houseInfo.address.country %></h5>
+        <h3><%= houseInfo.address.street %>, <%= houseInfo.address.city %></h3>
+        <h2>$<%= Number(houseInfo.askingPrice).toLocaleString('en-US') %></h2>
         <p class="pbids">
-          A superb detached Victorian property on one of the town's finest
-          roads, within easy reach of Barnes Village. The property has in excess
-          of 6000 sq/ft of accommodation, a driveway and landscaped garden.
+          <%= houseInfo.description %>
         </p>
         <div class="bids-container">
           <div class="bids-row header">
@@ -35,7 +33,12 @@
             <div class="bids-column">Bidder</div>
             <div class="bids-column">Amount</div>
           </div>
-          <% bids.forEach(bid => { %>
+          <% if (bids.length === 0) { %>
+            <div class="bids-row">
+              <div class="bids-column" colspan="3">No bids available for this house.</div>
+            </div>
+            <% } else { %>
+            <% bids.forEach(bid => { %>
           <div class="bids-row">
             <div class="bids-column action">
               <button class="btn btn-danger">Delete</button>
@@ -44,6 +47,7 @@
             <div class="bids-column">$<%= Number(bid.amount).toLocaleString('en-US') %></div>
           </div>
           <% }); %>
+          <% } %>
         <div class="bidder">
           <input class="bidperson" type="text" placeholder="Bidder" />
           <input class="bidamount" type="number" placeholder="0" />
