--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,6 +37,13 @@
         </div>
         <div class="column action">
           <form
+            action="/house/<%= house._id %>/bids"
+            method="GET"
+            style="display: inline"
+          >
+            <button type="submit" class="btn btn-primary">View</button>
+          </form>
+          <form
             action="/house/<%= house._id %>/delete"
             method="POST"
             style="display: inline"
